Fix misalignment

--- a/assets/style.css
+++ b/assets/style.css
@@ -417,7 +417,7 @@ input[type="search"] {
 
     .search-widget-container {
         position: absolute;
-        right: 0;
+        right: 8px;
         width: 300px;
         box-shadow: 0 0 0 rgba(0,0,0,0.2);
         transition: all 0.2s ease-in-out;
